@@ -1,3 +1,8 @@
+2007-02-17  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test_source.c (FUNCTION): avoid running tests on char, because
+	it can be unsigned
+
 2007-01-26  Brian Gough  <bjg@network-theory.co.uk>
 
 	* minmax_source.c: added support for NaNs
